--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "formik": "^2.2.8",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
+    "graphql-tools": "^7.0.5",
     "isomorphic-unfetch": "^3.1.0",
     "mongoose": "^5.12.10",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "babel-plugin-import-graphql": "^2.8.1"
   }
 }
